--- a/PoiemaCommunityBeta/.project
+++ b/PoiemaCommunityBeta/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PoiemaCommunity</name>
+	<name>PoiemaCommunityBeta</name>
 	<comment></comment>
 	<projects>
 	</projects>
